changed name of the resume

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!--===== HEADER =====-->
     <div id="header">
 
-      <h2>Jyothyraj Sobhana</h2>
-    <h4>		Cloud Engineer/SRE/Infrastructure Engineer<h4>
+      <h2>Mrudula Mechineni</h2>
+    <h4 style="text-align:center">Cloud Engineer/SRE/Infrastructure Engineer<h4>
     </div>
     <br>
     <div class="stuff" >
