--- a/index.html
+++ b/index.html
@@ -164,14 +164,12 @@ solving and coding to achieve pass rates.</li>
       <p>“A great team player [Jyothyraj] was easy to work with on projects and which she contributed to immensely. [Jyothyraj] is quick to grasp and apply technical concepts... she was a vital part of the exam study groups and ensured everybody was carried along, in addiIon, her background in educaIon really shone through during these sessions. I am confident that any organisaIon [Jyothyraj] works with will quickly come to realise they are lucky to have her as she quickly establishes herself as an integral part of any team.”
       </p>
       <br>
-      <p>
-        Koko Akpata (07956160623<a href=""> koko.eni@btinternet.com</a> )
-      </p>
+     
 </div>
 
 
 <div id="footer">
-  <h4 id="name">Jyothyraj</h4>
+  <h4 id="name">Mrudula</h4>
   <script>
         const AWS = require('aws-sdk')
         const docClient = new AWS.DynamoDB.DocumentClient()
